@@ -72,10 +72,9 @@ To export the data as HTML, run monocov like this:
 2.5 KNOWN BUGS
 --------------
 
-In the source code view (when double-clicking on an entry), the view is not
-scrolled to the first line of the method.
 The --debug option to mono should not be required and it should be enabled
 by default.
+We disable mono's domain unload since we don't handle that case yet.
 
 3. UTILITY PROGRAMS
 -------------------
